Doc/force-app/main/default/objects/Activity/fields/Campaign_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Follow_Up__c</fullName>
    <description>Values for tracking follow up post-marketing events.</description>
    <inlineHelpText>For tasks coming out of marketing events, track your outreach status using this field.</inlineHelpText>
    <label>Campaign Follow Up</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Purpose__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Target</fullName>
            </value>
            <value>
                <fullName>Sent Email / Left Voicemail</fullName>
            </value>
            <value>
                <fullName>Communicated With</fullName>
            </value>
            <value>
                <fullName>Meeting Has Been Set</fullName>
            </value>
            <value>
                <fullName>Already Engaged</fullName>
            </value>
            <value>
                <fullName>Not Going to Follow Up</fullName>
            </value>
            <value>
                <fullName>Asked about PR</fullName>
            </value>
            <value>
                <fullName>Said No to PR</fullName>
            </value>
            <value>
                <fullName>Said Yes to PR</fullName>
            </value>
            <value>
                <fullName>Said Maybe / Later / Needs Draft of PR</fullName>
            </value>
            <value>
                <fullName>Drafting PR</fullName>
            </value>
            <value>
                <fullName>Approved PR</fullName>
            </value>
            <value>
                <fullName>Issued PR</fullName>
            </value>
            <value>
                <fullName>Expired - No Action Needed</fullName>
            </value>
            <value>
                <fullName>Expired - Sent EM / Left VM</fullName>
            </value>
            <value>
                <fullName>Expired - Communicated With</fullName>
            </value>
            <value>
                <fullName>Closed by Owner</fullName>
            </value>
            <value>
                <fullName>No Longer with Firm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>