Doc/force-app/main/default/objects/Activity/fields/datetime_occurred__c.field-meta.xml
<CustomField>
    <fullName>datetime_occurred__c</fullName>
    <description>Date/Time at which this activity occurred.  This is to promote tracking of activity times (calls)</description>
    <label>Date/Time of Occurrence</label>
    <type>DateTime</type>
</CustomField>