Doc/force-app/main/default/objects/Activity/fields/Intapp_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Intapp_Account_Number__c</fullName>
    <formula>Account.IntApp_Account_Number__c</formula>
    <label>Intapp Account Number</label>
    <type>Text</type>
</CustomField>