Doc/force-app/main/default/objects/Activity/fields/License_Band_Timekeepers_Fee_Earners__c.field-meta.xml
<CustomField>
    <fullName>License_Band_Timekeepers_Fee_Earners__c</fullName>
    <description>This shows account record License Band Timekeepers OR fee Earners</description>
    <formula>Account.License_Band_Timekeepers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This shows account record License Band Timekeepers OR fee Earners</inlineHelpText>
    <label>License Band (Timekeepers/Fee Earners)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>