Doc/force-app/main/default/objects/Activity/fields/Other_Participants__c.field-meta.xml
<CustomField>
    <fullName>Other_Participants__c</fullName>
    <description>This field is used to denote who the other particpants were in calls, demos, etc. (SE, monitor, trainee, etc.)</description>
    <label>Other Participants</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alan Westley</fullName>
            </value>
            <value>
                <fullName>Alastair Seddon</fullName>
            </value>
            <value>
                <fullName>Alejandro Arteaga</fullName>
            </value>
            <value>
                <fullName>Brian Lynch</fullName>
            </value>
            <value>
                <fullName>Brian Skinner</fullName>
            </value>
            <value>
                <fullName>Brigitte Miklaszewski</fullName>
            </value>
            <value>
                <fullName>Brooke Barber</fullName>
            </value>
            <value>
                <fullName>Carolina Roller</fullName>
            </value>
            <value>
                <fullName>Catherine Phan-Dang</fullName>
            </value>
            <value>
                <fullName>Chris Kave</fullName>
            </value>
            <value>
                <fullName>Dan Bressler</fullName>
            </value>
            <value>
                <fullName>Dan Harsell</fullName>
            </value>
            <value>
                <fullName>Dan Tacone</fullName>
            </value>
            <value>
                <fullName>David Robinson</fullName>
            </value>
            <value>
                <fullName>David Wynn</fullName>
            </value>
            <value>
                <fullName>Don Coleman</fullName>
            </value>
            <value>
                <fullName>Eldean Ward</fullName>
            </value>
            <value>
                <fullName>Heather Lewis</fullName>
            </value>
            <value>
                <fullName>Jack Wang</fullName>
            </value>
            <value>
                <fullName>James Miller</fullName>
            </value>
            <value>
                <fullName>Jeff Armbrecht</fullName>
            </value>
            <value>
                <fullName>Jennifer Dell-Ernstrom</fullName>
            </value>
            <value>
                <fullName>Jerry Askew</fullName>
            </value>
            <value>
                <fullName>Jesse Meredith</fullName>
            </value>
            <value>
                <fullName>John Hall</fullName>
            </value>
            <value>
                <fullName>John Sharkey</fullName>
            </value>
            <value>
                <fullName>Jon Roscow</fullName>
            </value>
            <value>
                <fullName>Kamil Dada</fullName>
            </value>
            <value>
                <fullName>Kathy Englar</fullName>
            </value>
            <value>
                <fullName>Kaye Sycamore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>