Doc/force-app/main/default/objects/Activity/fields/Practice__c.field-meta.xml
<CustomField>
    <fullName>Practice__c</fullName>
    <label>Practice</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Revenue Practice</fullName>
            </value>
            <value>
                <fullName>Risk Practice</fullName>
            </value>
            <value>
                <fullName>Integration Practice</fullName>
            </value>
            <value>
                <fullName>Client Development Practice</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Platform</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Leaders &amp; Professionals</fullName>
            </value>
            <value>
                <fullName>Marketing &amp; Bus Dev</fullName>
            </value>
            <value>
                <fullName>Risk &amp; Compliance</fullName>
            </value>
            <value>
                <fullName>Finance &amp; Operations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>