Doc/force-app/main/default/objects/Activity/fields/Purpose_Detail__c.field-meta.xml
<CustomField>
    <fullName>Purpose_Detail__c</fullName>
    <label>Purpose Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Purpose__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1.0 Marketing outreach</fullName>
            </value>
            <value>
                <fullName>1.1 Suspect attends IntApp event</fullName>
            </value>
            <value>
                <fullName>1.2 Prospect self-id&apos;s to IntApp</fullName>
            </value>
            <value>
                <fullName>1.9 Other Marketing</fullName>
            </value>
            <value>
                <fullName>2.0 Outreach</fullName>
            </value>
            <value>
                <fullName>2.1 Negative response</fullName>
            </value>
            <value>
                <fullName>2.2 Receptive exchange</fullName>
            </value>
            <value>
                <fullName>2.3 On-site first meeting</fullName>
            </value>
            <value>
                <fullName>2.4 Account/Product Profiling</fullName>
            </value>
            <value>
                <fullName>2.9 Other Territory Development</fullName>
            </value>
            <value>
                <fullName>3.0 Opportunity meetings</fullName>
            </value>
            <value>
                <fullName>3.1 Gathering deal data points</fullName>
            </value>
            <value>
                <fullName>3.2 Providing ranges for budget</fullName>
            </value>
            <value>
                <fullName>3.3 Draft Discussion document</fullName>
            </value>
            <value>
                <fullName>3.4 Full/Technical demonstration</fullName>
            </value>
            <value>
                <fullName>3.5 Proposal/RFP response</fullName>
            </value>
            <value>
                <fullName>3.6 References</fullName>
            </value>
            <value>
                <fullName>3.7 Competitive evaluation</fullName>
            </value>
            <value>
                <fullName>3.8 Closed - no decision</fullName>
            </value>
            <value>
                <fullName>3.9 Lost to competitor</fullName>
            </value>
            <value>
                <fullName>4.0 Selected</fullName>
            </value>
            <value>
                <fullName>4.1 Negotiating price, package and terms</fullName>
            </value>
            <value>
                <fullName>4.2 Closed - won</fullName>
            </value>
            <value>
                <fullName>4.3 Right of Return</fullName>
            </value>
            <value>
                <fullName>4.9 Other Opportunity work</fullName>
            </value>
            <value>
                <fullName>5.0 Kick off meeting</fullName>
            </value>
            <value>
                <fullName>5.9 Other Services</fullName>
            </value>
            <value>
                <fullName>6.1 Support Outreach</fullName>
            </value>
            <value>
                <fullName>7.1 Account Management Outreach</fullName>
            </value>
            <value>
                <fullName>7.2 At-Risk Activity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>