Doc/force-app/main/default/objects/Activity/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to track the user who&apos;s assigning tasks</description>
    <inlineHelpText>Use this field to enter requestor of this task other than who created the task.</inlineHelpText>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requestor</relationshipName>
    <type>Lookup</type>
</CustomField>