Doc/force-app/main/default/objects/Activity/fields/Salesloft_Call_To__c.field-meta.xml
<CustomField>
    <fullName>Salesloft_Call_To__c</fullName>
    <label>Salesloft Call To</label>
    <type>Phone</type>
</CustomField>