Doc/force-app/main/default/objects/Activity/fields/Salesloft_Email_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Salesloft_Email_Template_ID__c</fullName>
    <label>Salesloft Email Template ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>