Doc/force-app/main/default/objects/Activity/fields/Salesloft_Meeting_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Salesloft_Meeting_Assigned_To__c</fullName>
    <label>Salesloft Meeting Assigned To</label>
    <length>200</length>
    <type>Text</type>
</CustomField>