Doc/force-app/main/default/objects/Activity/fields/Salesloft_Meeting_Booked_By__c.field-meta.xml
<CustomField>
    <fullName>Salesloft_Meeting_Booked_By__c</fullName>
    <label>Salesloft Meeting Booked By</label>
    <length>200</length>
    <type>Text</type>
</CustomField>