Doc/force-app/main/default/objects/Activity/fields/Salesloft_Meeting_Duration__c.field-meta.xml
<CustomField>
    <fullName>Salesloft_Meeting_Duration__c</fullName>
    <label>Salesloft Meeting Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>