Doc/force-app/main/default/objects/Activity/fields/Salesloft_Meeting_Recording_URL__c.field-meta.xml
<CustomField>
    <fullName>Salesloft_Meeting_Recording_URL__c</fullName>
    <label>Salesloft Meeting Recording URL</label>
    <type>Url</type>
</CustomField>