Doc/force-app/main/default/objects/Activity/fields/Salesloft_Meeting_Start_time__c.field-meta.xml
<CustomField>
    <fullName>Salesloft_Meeting_Start_time__c</fullName>
    <label>Salesloft Meeting Start time</label>
    <type>Time</type>
</CustomField>