Doc/force-app/main/default/objects/Activity/fields/Salesloft_Meeting_Type__c.field-meta.xml
<CustomField>
    <fullName>Salesloft_Meeting_Type__c</fullName>
    <label>Salesloft Meeting Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>