Doc/force-app/main/default/objects/Activity/fields/Salesloft_Step_Name__c.field-meta.xml
<CustomField>
    <fullName>Salesloft_Step_Name__c</fullName>
    <label>Salesloft Step Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>