Doc/force-app/main/default/objects/Activity/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ABR Participation/Preparation</fullName>
            </value>
            <value>
                <fullName>Address At Risk Product</fullName>
            </value>
            <value>
                <fullName>Ad Hoc Engagement</fullName>
            </value>
            <value>
                <fullName>Advise on Cloud Readiness/Migration</fullName>
            </value>
            <value>
                <fullName>Advise on Upgrade</fullName>
            </value>
            <value>
                <fullName>Best Practice Audit</fullName>
            </value>
            <value>
                <fullName>BU Meeting/Preparation</fullName>
            </value>
            <value>
                <fullName>Churn Risk Engagement</fullName>
            </value>
            <value>
                <fullName>Conduct Product Demo</fullName>
            </value>
            <value>
                <fullName>Create Blog/Video Content</fullName>
            </value>
            <value>
                <fullName>Industry Thought Leadership</fullName>
            </value>
            <value>
                <fullName>Manage Enhancement Requests</fullName>
            </value>
            <value>
                <fullName>Manage Product Notifications</fullName>
            </value>
            <value>
                <fullName>Moderate Forums</fullName>
            </value>
            <value>
                <fullName>Prep/Deliver User Group Meeting</fullName>
            </value>
            <value>
                <fullName>Prep/Deliver Webinar</fullName>
            </value>
            <value>
                <fullName>Present Product Roadmap</fullName>
            </value>
            <value>
                <fullName>Product Education/Feedback</fullName>
            </value>
            <value>
                <fullName>Program Development/Admin</fullName>
            </value>
            <value>
                <fullName>Program Governance</fullName>
            </value>
            <value>
                <fullName>Program Work</fullName>
            </value>
            <value>
                <fullName>Provide Advice</fullName>
            </value>
            <value>
                <fullName>Review Development Priorities</fullName>
            </value>
            <value>
                <fullName>Roadmap Presentation</fullName>
            </value>
            <value>
                <fullName>Solution Health Check</fullName>
            </value>
            <value>
                <fullName>Watch Them Work</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>