Doc/force-app/main/default/objects/Activity/fields/Task_Code__c.field-meta.xml
<CustomField>
    <fullName>Task_Code__c</fullName>
    <description>Used to help track duration of activities such as configuration, development, administration, etc.</description>
    <label>Task Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 N/A</fullName>
                <default>true</default>
                <label>0 N/A</label>
            </value>
            <value>
                <fullName>1 Admin</fullName>
            </value>
            <value>
                <fullName>2 Prep</fullName>
            </value>
            <value>
                <fullName>3 Config</fullName>
            </value>
            <value>
                <fullName>4 Custom</fullName>
            </value>
            <value>
                <fullName>5 Devel</fullName>
            </value>
            <value>
                <fullName>6 Q/A</fullName>
            </value>
            <value>
                <fullName>7 Rollout</fullName>
            </value>
            <value>
                <fullName>8 Train(I)</fullName>
            </value>
            <value>
                <fullName>9 Train(E)</fullName>
            </value>
            <value>
                <fullName>10 Travel</fullName>
            </value>
            <value>
                <fullName>11 OOO</fullName>
            </value>
            <value>
                <fullName>12 AT Support</fullName>
            </value>
            <value>
                <fullName>13 IB Support</fullName>
            </value>
            <value>
                <fullName>14 TB Support</fullName>
            </value>
            <value>
                <fullName>15 WB Support</fullName>
            </value>
            <value>
                <fullName>16 CRM</fullName>
            </value>
            <value>
                <fullName>17 Pre-Sales</fullName>
            </value>
            <value>
                <fullName>18 Marketing</fullName>
            </value>
            <value>
                <fullName>19 CSM</fullName>
            </value>
            <value>
                <fullName>20 Closing</fullName>
            </value>
            <value>
                <fullName>21 DTE Support</fullName>
            </value>
            <value>
                <fullName>22 Open Support</fullName>
            </value>
            <value>
                <fullName>23 Client Advocacy</fullName>
            </value>
            <value>
                <fullName>24 Client Advisory Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>