Doc/force-app/main/default/objects/Activity/fields/TB_Region_Submission_Code__c.field-meta.xml
<CustomField>
    <fullName>TB_Region_Submission_Code__c</fullName>
    <description>This field is to specify which TB instance the entry is being submitted from. For Time Builder use only.</description>
    <inlineHelpText>This field is to specify which TB instance the entry is being submitted from. For Time Builder use only.</inlineHelpText>
    <label>TB Region Submission Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>