Doc/force-app/main/default/objects/Activity/listViews/All_Open_Activities_Due_3_1_2011.listView-meta.xml
<ListView>
    <fullName>All_Open_Activities_Due_3_1_2011</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TASK.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>TASK.DUE_DATE</field>
        <operation>lessThan</operation>
        <value>THIS_FISCAL_QUARTER</value>
    </filters>
    <label>All Open Activities Due &lt; 3/31/2011</label>
    <sharedTo>
        <role>CEO</role>
        <role>COO</role>
        <role>ClientRelationshipManager</role>
        <role>SalesOperations</role>
    </sharedTo>
</ListView>