Doc/force-app/main/default/objects/Activity/listViews/All_Open_Activities_Follow_Up.listView-meta.xml
<ListView>
    <fullName>All_Open_Activities_Follow_Up</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TASK.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>TASK.SUBJECT</field>
        <operation>contains</operation>
        <value>LinkedIn</value>
    </filters>
    <label>All Open Activities - Follow Up</label>
    <language>en_US</language>
</ListView>