Doc/force-app/main/default/objects/Activity/listViews/AllOpenActivities.listView-meta.xml
<ListView>
    <fullName>AllOpenActivities</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TASK.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Open Activities</label>
</ListView>