Doc/force-app/main/default/objects/Activity/listViews/Colleen_s_Tasks.listView-meta.xml
<ListView>
    <fullName>Colleen_s_Tasks</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>colleeng</value>
    </filters>
    <label>Colleen&apos;s Tasks</label>
    <language>en_US</language>
    <sharedTo>
        <group>CSMs</group>
    </sharedTo>
</ListView>