Doc/force-app/main/default/objects/Activity/listViews/Lori_s_Activities.listView-meta.xml
<ListView>
    <fullName>Lori_s_Activities</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>Campaign_Follow_Up__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.CREATED_DATE</field>
        <operation>lessThan</operation>
        <value>2/28/2015 12:00 AM</value>
    </filters>
    <filters>
        <field>TASK.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>2/22/2015 12:00 AM</value>
    </filters>
    <filters>
        <field>TASK.WHO_NAME</field>
        <operation>notEqual</operation>
        <value>spirlin,aimee</value>
    </filters>
    <filters>
        <field>TASK.WHO_NAME</field>
        <operation>notEqual</operation>
        <value>snyder,pam</value>
    </filters>
    <filters>
        <field>TASK.WHO_NAME</field>
        <operation>notEqual</operation>
        <value>shafiee,dave</value>
    </filters>
    <label>Lori&apos;s Activities</label>
    <sharedTo>
        <group>Sales_Team</group>
    </sharedTo>
</ListView>