Doc/force-app/main/default/objects/Activity/listViews/My_Open_Activities_This_Year_By_Client.listView-meta.xml
<ListView>
    <fullName>My_Open_Activities_This_Year_By_Client</fullName>
    <columns>TASK.CREATED_DATE</columns>
    <columns>TASK.SUBJECT</columns>
    <columns>Purpose__c</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>Account_Name__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <filters>
        <field>TASK.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Task.Client_Advisory_Group</value>
    </filters>
    <filters>
        <field>TASK.WHAT_NAME</field>
        <operation>contains</operation>
        <value>Reed</value>
    </filters>
    <label>My Open Activities This Year By Client</label>
    <language>en_US</language>
</ListView>